Fixed bug of reading manifests using Crossdata 0.4