@@ -117,11 +117,17 @@
             <artifactId>spark-cassandra-connector_${scala.binary.version}</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hbase_2.10</artifactId>
-            <version>1.3.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.spark</groupId>-->
+            <!--<artifactId>spark-hbase_2.10</artifactId>-->
+            <!--<version>1.3.0</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>com.sun.jersey</groupId>-->
+                    <!--<artifactId>jersey-json</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.stratio</groupId>
             <artifactId>spark-mongodb</artifactId>
@@ -240,28 +246,6 @@
            <forkCount>10</forkCount>
         <reuseForks>false</reuseForks>
                 </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>crossdata-connector-maven-plugin</artifactId>
-                <groupId>com.stratio.crossdata</groupId>
-                <version>${version.crossdata}</version>
-                <!--  <executions>
-               <execution>
-                      <id>crossdata-plugin</id>
-                      <phase>install</phase>
-                      <goals>
-                          <goal>install
-                          </goal>
-                      </goals> -->
-                        <configuration>
-                            <mainClass>com.stratio.connector.sparksql.SparkSQLConnector</mainClass>
-
-<!--ESTABA AQUI EL JMX -->
-
-                            <javaOpts>-XX:MaxPermSize=512M -Xmx3072m</javaOpts>
-                        </configuration>
-                    <!--</execution>
-                </executions> -->
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
